--- a/livestreams/1s/index.html
+++ b/livestreams/1s/index.html
@@ -45,32 +45,17 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-           <li><a href="http://footballify.net/home">News</a></li>
-           <li><a href="http://footballify.net/livescores">Football Scores</a></li>
-           <li><a href="http://footballify.net/standings">Standings</a></li>
-           <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a href="http://footballify.net/contact">Contact</a></li>
+            <li><a href="http://footballify.net/">Football Scores</a></li>
+            <li><a href="http://footballify.net/news">News</a></li>
+            <li><a href="http://footballify.net/standings">Standings</a></li>
+            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+            <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
 </div>
 
-<!-- ALL SCORES -->
-<div    class="left"
-        id="wg-api-football-fixtures"
-        data-host="v3.football.api-sports.io"
-        data-refresh="15"
-        data-date="2022-05-12"
-        data-key = "e54f3d3972ca8251c1259694b49948de"
-        data-theme="false"
-        data-show-errors="false"
-        class="api_football_loader"
-        style="border: 3px solid #5fbd46;">    
-        
-</div>
-<script
-        type="module"
-        src="https://widgets.api-sports.io/football/1.1.8/widget.js">
-</script>
+<iframe data-lazyloaded="1" src="https://gamerarcades.com/assets/ts3.html" width="100%" height="500" id="video" data-src="https://gamerarcades.com/assets/ts3.html" allowfullscreen="true" scrolling="no" frameborder="0" allow="autoplay" data-ll-status="loaded" class="entered litespeed-loaded"></iframe>
+
 <div class="bnavbar">
     <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
     <a href="http://footballify.net/dmca" class="active" >DMCA</a>
