--- a/livestreams/2/index.html
+++ b/livestreams/2/index.html
@@ -46,8 +46,8 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a href="http://footballify.net/home">News</a></li>
-            <li><a href="http://footballify.net/livescores">Football Scores</a></li>
+            <li><a href="http://footballify.net/">Football Scores</a></li>
+            <li><a href="http://footballify.net/news">News</a></li>
             <li><a href="http://footballify.net/standings">Standings</a></li>
             <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
             <li><a href="http://footballify.net/contact">Contact</a></li>
@@ -59,14 +59,14 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Rayo Vallecano VS Villareal</h1>
-    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 1</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 4</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 8</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
