--- a/livestreams/3/index.html
+++ b/livestreams/3/index.html
@@ -46,11 +46,11 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a href="http://footballify.net/home">News</a></li>
-           <li><a href="http://footballify.net/livescores">Football Scores</a></li>
-           <li><a href="http://footballify.net/standings">Standings</a></li>
-           <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a href="http://footballify.net/contact">Contact</a></li>
+            <li><a href="http://footballify.net/">Football Scores</a></li>
+            <li><a href="http://footballify.net/news">News</a></li>
+            <li><a href="http://footballify.net/standings">Standings</a></li>
+            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+            <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
 </div>
