--- a/standings/laliga/index.html
+++ b/standings/laliga/index.html
@@ -44,12 +44,11 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-           <li><a class="topnav" href="http://footballify.net">Football Scores</a></li>
-           <li><a class="topnav" href="http://footballify.net/standings">Standings</a></li>
-           <li><a class="topnav" href="#">Stats</a></li>
-           <li><a class="topnav" href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a class="topnav" href="http://footballify.net/contact">Contact</a></li>
-        </ul>
+            <li><a href="http://footballify.net/">Football Scores</a></li>
+            <li><a href="http://footballify.net/news">News</a></li>
+            <li><a href="http://footballify.net/standings">Standings</a></li>
+            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+            <li><a href="http://footballify.net/contact">Contact</a></li>
      </nav>
      <nav class="leaguesnav">
         <input type="checkbox" id="click">
