--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <i class="fas fa-bars"></i>
     </label>
     <ul>
-       <li><a class="active" href="http://footballify.net">Football Scores</a></li>
-       <li><a href="http://footballify.net/standings">Standings</a></li>
-       <li><a href="#">Stats</a></li>
-       <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-       <li><a href="http://footballify.net/contact">Contact</a></li>
+        <li><a href="http://footballify.net/">Football Scores</a></li>
+        <li><a href="http://footballify.net/news">News</a></li>
+        <li><a href="http://footballify.net/standings">Standings</a></li>
+        <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+        <li><a href="http://footballify.net/contact">Contact</a></li>
     </ul>
  </nav>
  </div>
@@ -64,7 +64,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         id="wg-api-football-fixtures"
         data-host="v3.football.api-sports.io"
         data-refresh="15"
-        data-date="2022-05-11"
+        data-date="2022-05-12"
         data-key = "e54f3d3972ca8251c1259694b49948de"
         data-theme="false"
         data-show-errors="false"
