--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -46,11 +46,11 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a href="http://footballify.net/home">News</a></li>
-           <li><a href="http://footballify.net/livescores">Football Scores</a></li>
-           <li><a href="http://footballify.net/standings">Standings</a></li>
-           <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a href="http://footballify.net/contact">Contact</a></li>
+            <li><a href="http://footballify.net/">Football Scores</a></li>
+            <li><a href="http://footballify.net/news">News</a></li>
+            <li><a href="http://footballify.net/standings">Standings</a></li>
+            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+            <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
 </div>
@@ -61,13 +61,13 @@
 
     <h1>Real Sociedad VS Cadiz</h1>
     <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
+    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-1/" target="_blank">Link 2</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
+    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-1/" target="_blank">Link 5</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-1/" target="_blank">Link 8</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
