--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -37,12 +37,11 @@
         <label for="click" class="menu-btn">
         <i class="fas fa-bars"></i>
         </label>
-        <ul>
-            <li><a href="http://footballify.net/home">News</a></li>
-            <li><a href="http://footballify.net/livescores">Football Scores</a></li>
-            <li><a href="http://footballify.net/standings">Standings</a></li>
-            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-            <li><a href="http://footballify.net/contact">Contact</a></li>
+        <li><a href="http://footballify.net/">Football Scores</a></li>
+        <li><a href="http://footballify.net/news">News</a></li>
+        <li><a href="http://footballify.net/standings">Standings</a></li>
+        <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+        <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
 </div>
@@ -53,13 +52,13 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/2">Rayo Vallecano VS Villareal</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/3">Real Madrid VS Levante</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/4">Tottenham Hotspur VS Arsenal</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/">Leicester City VS Norwich City</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/">Leicester City VS Norwich City</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/">Watford FC VS Everton FC</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/">Sevilla VS RCD Mallorca</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/">FC Nantes VS Stade Rennais</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/">Manchester City VS Wolverhampton Wanderers</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/">Elche CF VS Atletico Madrid</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/">Juventus VS Inter Milan</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Juventus VS Inter Milan</a></h1> -->
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
 <div class="bnavbar">
         <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
