--- a/livestreams/11/index.html
+++ b/livestreams/11/index.html
@@ -47,9 +47,9 @@
         </label>
         <ul>
            <li><a href="http://footballify.net">Football Scores</a></li>
-           <li><a href="http://footballify.net">Standings</a></li>
-           <li><a href="#">Stats</a></li>
-           <li><a class="active" href="http://footballify.net/livestreams">Live Streams</a></li>
+           <li><a href="#">News</a></li>
+           <li><a href="http://footballify.net/standings">Standings</a></li>
+           <li><a class="active" class="active" href="http://footballify.net/livestreams">Live Streams</a></li>
            <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
