--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -49,7 +49,7 @@
             <li><a href="http://footballify.net/">Football Scores</a></li>
             <li><a href="http://footballify.net/news">News</a></li>
             <li><a href="http://footballify.net/standings">Standings</a></li>
-            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+            <li><a class="active" href="http://footballify.net/livestreams">Live Streams</a></li>
             <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
@@ -60,7 +60,7 @@
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
 
     <h1>Real Sociedad VS Cadiz</h1>
-    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+    <h2><a class="gamelinks" href="http://footballify.net/" target="_blank">Link 1</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-1/" target="_blank">Link 2</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
