--- a/standings/ligue1/index.html
+++ b/standings/ligue1/index.html
@@ -46,7 +46,7 @@
         <ul>
             <li><a href="http://footballify.net/">Football Scores</a></li>
             <li><a href="http://footballify.net/news">News</a></li>
-            <li><a href="http://footballify.net/standings">Standings</a></li>
+            <li><a class="active" href="http://footballify.net/standings">Standings</a></li>
             <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
             <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
