--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -28,23 +28,23 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    </head>
     </head>
 <body>
-    <div>
     <nav>
         <div class="logo">
-            <a class= "webname" href="http://footballify.net">Footballify</a>
-    </div>
-        <input type="checkbox" id="click">
-        <label for="click" class="menu-btn">
-        <i class="fas fa-bars"></i>
-        </label>
+                <a class= "webname" href="http://footballify.net">Footballify</a>
+        </div>
+    <input type="checkbox" id="click">
+    <label for="click" class="menu-btn">
+    <i class="fas fa-bars"></i>
+    </label>
+    <ul>
         <li><a href="http://footballify.net/">Football Scores</a></li>
         <li><a href="http://footballify.net/news">News</a></li>
         <li><a href="http://footballify.net/standings">Standings</a></li>
-        <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+        <li><a class="active" href="http://footballify.net/livestreams">Live Streams</a></li>
         <li><a href="http://footballify.net/contact">Contact</a></li>
-        </ul>
-     </nav>
-</div>
+    </ul>
+ </nav>
+ </div>
 
 <div class="streamlist"> 
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
