--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <i class="fas fa-bars"></i>
     </label>
     <ul>
-        <li><a href="http://footballify.net/">Football Scores</a></li>
+        <li><a class ="active" href="http://footballify.net/">Football Scores</a></li>
         <li><a href="http://footballify.net/news">News</a></li>
         <li><a href="http://footballify.net/standings">Standings</a></li>
         <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
