--- a/standings/index.html
+++ b/standings/index.html
@@ -35,22 +35,23 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    </head>
     </head>
 <body>
-    <nav class="standings">
+    <nav>
         <div class="logo">
-         <a class= "webname" href="http://footballify.net">Footballify</a>
-         </div>
-        <input type="checkbox" id="click">
-        <label for="click" class="menu-btn">
-        <i class="fas fa-bars"></i>
-        </label>
-        <ul>
-            <li><a href="http://footballify.net/">Football Scores</a></li>
-            <li><a href="http://footballify.net/news">News</a></li>
-            <li><a class="active" href="http://footballify.net/standings">Standings</a></li>
-            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-            <li><a href="http://footballify.net/contact">Contact</a></li>
-        </ul>
-     </nav>
+                <a class= "webname" href="http://footballify.net">Footballify</a>
+        </div>
+    <input type="checkbox" id="click">
+    <label for="click" class="menu-btn">
+    <i class="fas fa-bars"></i>
+    </label>
+    <ul>
+        <li><a class ="active" href="http://footballify.net/">Football Scores</a></li>
+        <li><a href="http://footballify.net/news">News</a></li>
+        <li><a href="http://footballify.net/standings">Standings</a></li>
+        <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+        <li><a href="http://footballify.net/contact">Contact</a></li>
+    </ul>
+ </nav>
+ </div>
      <nav class="leaguesnav">
         <input type="checkbox" id="click">
         <ul>
