--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -62,14 +62,14 @@
     <h1>Real Sociedad VS Cadiz</h1>
     <h2><a class="gamelinks" href="http://footballify.net/" target="_blank">Link 1</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-1/" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/al-sociedad-vs-ca/s2.php" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="http://enjoy4k.xyz/8k/hd4.php" target="_blank">Link 4</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-1/" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/al-sociedad-vs-ca/s2.php" target="_blank">Link 6</a></h2>
+    <h2><a class="gamelinks" href="http://hytlive.com/info.html?s=azEybGFzY2NvbnRlbnQyMDIyMDUxMjYxMDQxMg==" target="_blank">Link 7</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-1/" target="_blank">Link 8</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
+    <h2><a class="gamelinks" href="http://hytlive.com/info.html?s=azEybGFzY2NvbnRlbnQyMDIyMDUxMjYxMDQxMg==" target="_blank">Link 9</a></h2>
+    <h2><a class="gamelinks" href="http://enjoy4k.xyz/8k/hd4.php" target="_blank">Link 10</a></h2>
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
 
 </div>
