--- a/livestreams/4/index.html
+++ b/livestreams/4/index.html
@@ -61,14 +61,14 @@
     <h1>Tottenham Hotspur VS Arsenal</h1>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/tottenham-vs-arsenal-s1/" target="_blank">Link 1</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/enham-hotspur-vs-ars/s1.php" target="_blank">Link 3</a></h2>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/tottenham-vs-arsenal-s1/" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+    <h2><a class="gamelinks" href="http://bongstreams.com/events/soccer/tottenham-hotspur-vs-arsenal/" target="_blank">Link 5</a></h2>
+    <h2><a class="gamelinks" href="http://enjoy4k.xyz/8k/hd5.php" target="_blank">Link 6</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 7</a></h2>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/tottenham-vs-arsenal-s1/" target="_blank">Link 8</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
+    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/enham-hotspur-vs-ars/s1.php" target="_blank">Link 9</a></h2>
+    <h2><a class="gamelinks" href="http://bongstreams.com/events/soccer/tottenham-hotspur-vs-arsenal/" target="_blank">Link 10</a></h2>
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
 
 </div>
