--- a/test/index.html
+++ b/test/index.html
@@ -59,7 +59,7 @@
 
 <div class="parentDiv ">
 <div id="league1"><h1>Premier League</h1></div>
-<div id="league1fixture1"><h1>Man City VS West Ham</h1></div>
+<div id="league1fixture1"><h1>Man City VS West Hamm</h1></div>
 
 </div>
 
