--- a/test/index.html
+++ b/test/index.html
@@ -57,9 +57,9 @@
 </div>
 
 
-<div class="parentDiv ">
+<div id="parentDiv">
 <div id="league1"><h1>Premier League</h1></div>
-<div id="league1fixture1"><h1>Man City VS West Hammgf</h1></div>
+<div id="league1fixture1"><h1>Man City VS West Hammmgf</h1></div>
 
 </div>
 
