--- a/test/index.html
+++ b/test/index.html
@@ -68,4 +68,7 @@
     <a href="http://footballify.net/dmca" class="active" >DMCA</a>
     <a href="http://footballify.net/contact" class="active">Contact</a>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="script.js"></script>
 </body>
