--- a/test/index.html
+++ b/test/index.html
@@ -55,9 +55,13 @@
      </nav>
 </div>
 
-<div class="parentDiv">
-
-</div>
+<!-- <div class="parentDiv">
+    <div class="league">Data goes here</div>
+    <div class="team1">Data goes here</div>
+    <div class="score1">Data goes here</div>
+    <div class="team2">Data goes here</div>
+    <div class="score2">Data goes here</div>
+</div> -->
 
 
 
