--- a/test/index.html
+++ b/test/index.html
@@ -53,13 +53,9 @@
      </nav>
 </div>
 
-<!-- <div class="parentDiv">
-    <div class="league">Data goes here</div>
-    <div class="team1">Data goes here</div>
-    <div class="score1">Data goes here</div>
-    <div class="team2">Data goes here</div>
-    <div class="score2">Data goes here</div>
-</div> -->
+<div class="parentContainer">
+
+</div>
 
 
 
