--- a/test/index.html
+++ b/test/index.html
@@ -54,15 +54,13 @@
 </div>
 
 <div class="parentContainer">
-
+<div class="leftCont"></div>
+<div class="middleCont"></div>
+<div class="rightCont"></div>
 </div>
 
 
 
 
-<div class="bnavbar">
-    <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
-    <a href="http://footballify.net/dmca" class="active" >DMCA</a>
-    <a href="http://footballify.net/contact" class="active">Contact</a>
-</div>
+
 </body>
