--- a/test/index.html
+++ b/test/index.html
@@ -51,11 +51,9 @@
             <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
-</div>
-
+</div id='wrapper'>
+<div id="left"></div>
 <div class="parentContainer">
-<script>
-
-</script>
+<div id="right"></div>
 </div>
 </body>
