--- a/test/index.html
+++ b/test/index.html
@@ -52,7 +52,9 @@
         </ul>
      </nav>
 </div id='wrapper'>
-<div id="left"></div>
+<div id="left">
+    <div>hellooooo</div>
+</div>
 <div class="parentContainer">
 <div id="right"></div>
 </div>
