--- a/test/index.html
+++ b/test/index.html
@@ -55,7 +55,6 @@
 <div id="left">
     <div>hellooooo</div>
 </div>
-<div class="parentContainer">
+<div class="parentContainer"></div>
 <div id="right"></div>
-</div>
 </body>
