--- a/test/index.html
+++ b/test/index.html
@@ -52,9 +52,14 @@
         </ul>
      </nav>
 </div id='wrapper'>
-<div id="left">
-    <div>hellooooo</div>
+
+    <div id="left">
+        <div>hellooooo</div>
+    </div>
+
+    <div class="parentContainer"></div>
+
+    <div id="right"></div>
+
 </div>
-<div class="parentContainer"></div>
-<div id="right"></div>
 </body>
