--- a/test/index.html
+++ b/test/index.html
@@ -51,7 +51,7 @@
             <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
-</div id='wrapper'>
+<div id='wrapper'>
 
     <div id="left">
         <div>hellooooo</div>
@@ -59,7 +59,7 @@
 
     <div class="parentContainer"></div>
 
-    <div id="right"></div>
+    <div id="right">threeeeeeeeeee</div>
 
 </div>
 </body>
