--- a/test/index.html
+++ b/test/index.html
@@ -54,7 +54,10 @@
 <div id='wrapper'>
 
     <div id="left">
-        <div>hellooooo</div>
+        <div>
+            <img src="https://cdn.vox-cdn.com/thumbor/sim7VFyRep_h7xjmdIWv8QI8okg=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22187016/1230227446.jpg">
+            <h1>Daily Football Round-Up</h1>
+        </div>
     </div>
 
     <div class="parentContainer"></div>
