--- a/test/index.html
+++ b/test/index.html
@@ -58,9 +58,7 @@
             <div class = 'league addborder'>Football News</div>
             <div class="imgcont">
                 <img class="newsimg" src="https://cdn.vox-cdn.com/thumbor/sim7VFyRep_h7xjmdIWv8QI8okg=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22187016/1230227446.jpg">
-
-                    <h1>Daily Footballify Round-Up: Juventus Shocked By Fiorentina in Bid for European Qualification, Messi and PSG Ease Past FC Metz, Marsielle Topple FC Strasbourg</h1>
-
+                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong> Juventus Shocked By Fiorentina in Bid for European Qualification, Messi and PSG Ease Past FC Metz, Marsielle Topple FC Strasbourg</h1>
             </div>
             </div>
     </div>
