--- a/test/index.html
+++ b/test/index.html
@@ -54,7 +54,7 @@
 <div id='wrapper'>
 
     <div id="left">
-        <div>
+        <div class="newsel">
             <div class = 'league addborder'>Football News</div>
             <div class="imgcont">
                 <img class="newsimg" src="https://cdn.vox-cdn.com/thumbor/sim7VFyRep_h7xjmdIWv8QI8okg=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22187016/1230227446.jpg">
