--- a/test/index.html
+++ b/test/index.html
@@ -61,7 +61,7 @@
                                 <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong> Juventus Shocked By Fiorentina in Bid for European Qualification, Messi and PSG Ease Past FC Metz, Marsielle Topple FC Strasbourg</h1>
                              </div>
                             </div>
-                        <hr class="rounded"> 
+                        <hr class="roundedBar"> 
     </div>
 
     <div class="parentContainer"></div>
