--- a/test/index.html
+++ b/test/index.html
@@ -65,8 +65,8 @@
 
                         <div class="newsel">
                              <div class="imgcont">
-                                <img class="newsimg" src="https://cdn.vox-cdn.com/thumbor/sim7VFyRep_h7xjmdIWv8QI8okg=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22187016/1230227446.jpg">
-                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong> Juventus Shocked By Fiorentina in Bid for European Qualification, Messi and PSG Ease Past FC Metz, Marsielle Topple FC Strasbourg</h1>
+                                <img class="newsimg" class="square" src="https://www.playmakerstats.com/img/jogadores/49/726349_med__20201126154143_steve_mounie.jpg">
+                                <h1 class = "innerText"><strong>Footballify Goal Of The Day:</strong> Steven Mounie Wins Goal Of The Day After Amazing Cushioned Volley Into the Roof of the Net, See Here!</h1>
                              </div>
                             </div>
                         <hr class="roundedBar"> 
