--- a/test/index.html
+++ b/test/index.html
@@ -65,7 +65,7 @@
 
                         <div class="newsel">
                              <div class="imgcont">
-                                <img class="newsimg" class="square" src="https://www.playmakerstats.com/img/jogadores/49/726349_med__20201126154143_steve_mounie.jpg">
+                                <img class="newsimg square" src="https://www.playmakerstats.com/img/jogadores/49/726349_med__20201126154143_steve_mounie.jpg">
                                 <h1 class = "innerText"><strong>Footballify Goal Of The Day:</strong> Steven Mounie Wins Goal Of The Day After Amazing Cushioned Volley Into the Roof of the Net, <a href="https://streamja.com/O42qj">See Here!</a></h1>
                              </div>
                             </div>
