--- a/test/index.html
+++ b/test/index.html
@@ -74,7 +74,7 @@
                         <div class="newsel">
                             <div class="imgcont">
                                <img class="newsimg square" src="https://pbs.twimg.com/media/Ez66-tGWUAAIYCC.jpg:large">
-                               <h1 class = "innerText"><strong>Premier League Pandemonium:</strong> Ilkay Gundogan and Rodri Help Mount AMAZING Comeback After Going 2-0 DOWN Against Aston Villa To Win City The Premier League Title</a></h1>
+                               <h1 class = "innerText"><strong>Premier League Pandemonium:</strong> Ilkay Gundogan and Rodri Help Mount AMAZING Comeback After Going 2-0 DOWN Against Aston Villa To Win City The Premier League Title! Liverpool Win Not Enough</a></h1>
                             </div>
                            </div>
                        <hr class="roundedBar"> 
