--- a/test/index.html
+++ b/test/index.html
@@ -33,8 +33,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="script.js"></script>
     </head>
-<body>
-    <div></div>
+<body class="fade">
     <nav>
         <div class="logo">
             <a class= "webname" href="http://footballify.net">Footballify</a>
