--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="script.js"></script>
     </head>
-<body class="fade">
+<body>
+    <div id="cover">
+
     <nav>
         <div class="logo">
             <a class= "webname" href="http://footballify.net">Footballify</a>
@@ -85,5 +87,6 @@
 
     <div id="right">threeeeeeeeeee</div>
 
+</div>
 </div>
 </body>
