--- a/test/index.html
+++ b/test/index.html
@@ -34,8 +34,7 @@
         <script src="script.js"></script>
     </head>
 <body>
-    <div id="cover">
-
+<div class="hiddenMain">
     <nav>
         <div class="logo">
             <a class= "webname" href="http://footballify.net">Footballify</a>
