--- a/test/index.html
+++ b/test/index.html
@@ -34,7 +34,6 @@
         <script src="script.js"></script>
     </head>
 <body>
-<div class="hiddenMain">
     <nav>
         <div class="logo">
             <a class= "webname" href="http://footballify.net">Footballify</a>
@@ -51,6 +50,7 @@
             <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
+<div id="hiddenMain">
 <div id='wrapper'> 
 
     <div id="left">
