--- a/test/index.html
+++ b/test/index.html
@@ -50,8 +50,7 @@
             <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
-<div id="hiddenMain">
-<div id='wrapper'> 
+<div id='wrapper' class="hideThis"> 
 
     <div id="left">
                         <div class="newsel">
@@ -82,9 +81,9 @@
                        <hr class="roundedBar"> 
     </div>
 
-    <div class="parentContainer"></div>
+    <div class="parentContainer hideThis"></div>
 
-    <div id="right">threeeeeeeeeee</div>
+    <div id="right" class="hideThis">threeeeeeeeeee</div>
 
 </div>
 </div>
