--- a/test/index.html
+++ b/test/index.html
@@ -81,9 +81,9 @@
                        <hr class="roundedBar"> 
     </div>
 
-    <div class="parentContainer hideThis"></div>
+    <div class="parentContainer "></div>
 
-    <div id="right" class="hideThis">threeeeeeeeeee</div>
+    <div id="right" class="">threeeeeeeeeee</div>
 
 </div>
 </div>
