--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="script.js"></script>
     </head>
-<body>
+<body  class="hideThis>
     <nav>
         <div class="logo">
             <a class= "webname" href="http://footballify.net">Footballify</a>
@@ -50,7 +50,7 @@
             <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
-<div id='wrapper' class="hideThis"> 
+<div id='wrapper'> 
 
     <div id="left">
                         <div class="newsel">
