--- a/test/index.html
+++ b/test/index.html
@@ -58,7 +58,7 @@
                             <div class = 'league addborder'>Football News</div>
                              <div class="imgcont">
                                 <img class="newsimg" src="https://dynaimage.cdn.cnn.com/cnn/c_fill,g_auto,w_1200,h_675,ar_16:9/https%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F220522185457-man-city-epl-trophy-lift-2022.jpg">
-                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong> Man City Win Premier League! Salah And Son Share Golden Boot. Serie A Title Race Continues as AC Milan And Inter Win!</h1>
+                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong> Man City Win Premier League! Salah And Son Share Golden Boot. Serie A Title Race Continues as AC Milan And Inter Win!<a class="blueLink" href="https://footballify.net/news/"> Read Here!</a></h1>
                              </div>
                             </div>
                         <hr class="roundedBar"> 
@@ -72,10 +72,10 @@
                         <hr class="roundedBar"> 
 
                         <div class="newsel">
-                            <a class="linkDiv" href="https://footballify.net/news/"></a>
                             <div class="imgcont">
                                <img class="newsimg square" src="https://pbs.twimg.com/media/Ez66-tGWUAAIYCC.jpg:large">
-                               <h1 class = "innerText"><strong>Premier League Pandemonium:</strong> Ilkay Gundogan and Rodri Help Mount AMAZING Comeback After Going 2-0 DOWN Against Aston Villa To Win City The Premier League Title! Liverpool Win Not Enough</a></h1>
+                               <h1 class = "innerText"><strong>Premier League Pandemonium:</strong> Ilkay Gundogan and Rodri Help Mount AMAZING Comeback After Going 2-0 DOWN Against Aston Villa To Win City The Premier League Title! Liverpool Win Not Enough!<a class="blueLink" href="https://footballify.net/news/"> Read Here!</a>
+                               </h1>
                             </div>
                            </div>
                        <hr class="roundedBar"> 
