--- a/test/index.html
+++ b/test/index.html
@@ -82,7 +82,7 @@
 
     <div class="parentContainer "></div>
 
-    <div id="right" class="">threeeeeeeeeee</div>
+    <div id="right" class="sideScoreDiv">threeeeeeeeeee</div>
 
 </div>
 </div>
