--- a/test/index.html
+++ b/test/index.html
@@ -82,7 +82,7 @@
 
     <div class="parentContainer "></div>
 
-    <div id="right" class="sideScoreDiv"><h1>Featured Match</h1></div>
+    <div id="right" class="sideScoreDiv"><h1 class="rightBar">Featured Match</h1></div>
 
 </div>
 </div>
