--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,6 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="script.js"></script>
     </head>
 <body  class="hideThis">
     <nav>
@@ -87,3 +86,6 @@
 </div>
 </div>
 </body>
+
+<script src="script.js"></script>
+</html>
