--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="http://footballify.net/">Football Scores</a></li>
             <li><a href="http://footballify.net/news">News</a></li>
             <li><a href="http://footballify.net/standings">Standings</a></li>
-            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+            <li><a href="http://footballify.net/">Live Scores</a></li>
             <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
