--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                         <div class="newsel">
                             <div class = 'league addborder'>Football News</div>
                              <div class="imgcont">
-                                <img class="newsimg" src="https://www.nj.com/resizer/YT6jtBk5zh2ycsx-1rZC1vsvf7U=/1280x0/smart/cloudfront-us-east-1.images.arcpublishing.com/advancelocal/QLFJ5YQY2RE6FNP5JO3NCN7H64.jpeg">
-                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong> Netherlands Triumph Against Belgium, Denmark Surprise France With 2-1 Victory, and Austria Smash Croatia</h1>
+                                <img class="newsimg" src="https://static.standard.co.uk/2022/06/04/19/newFile.jpg?width=1200&auto=webp&quality=75">
+                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong> England Suffer Shock Defeat To Hungary, Italy-Germany Ends 1-1, Turkey Picks Up Routine Win!</h1>
                              </div>
-                             <!-- <a class="blueLink" href="https://footballify.net/news/"> Read Here!</a> -->
+                             <!-- <a class="blueLink" href="https://footballify.net/news/"> Read Here!</a>                                                                                                 fef -->
                             </div>
                         <hr class="roundedBar"> 
 
                         <div class="newsel">
                              <div class="imgcont">
-                                <img class="newsimg square" src="https://phantom-marca.unidadeditorial.es/8f659df69afa6697f77689a954bd0c1b/crop/0x25/2045x1175/resize/1320/f/jpg/assets/multimedia/imagenes/2021/10/11/16339597623252.jpg">
-                                <h1 class = "innerText"><strong>Footballify Forecast:</strong> England Take On Hungary, Italy Play Germany In the Nations League!</h1>
+                                <img class="newsimg square" src="https://sm.imgix.net/20/36/porcro.JPG?w=1200&h=1200&auto=compress,format&fit=clip">
+                                <h1 class = "innerText"><strong>Footballify Forecast:</strong> Portugal Set to Play Switzerland, Wales Play Ukraine for World Cup Spot, Spain Face Czechia!</h1>
                              </div>
                             </div>
                         <hr class="roundedBar"> 
