--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
                             </div>
                         <hr class="roundedBar"> 
 
+                        <div class="newsel">
+                            <div class="imgcont">
+                               <img class="newsimg square" src="https://sm.imgix.net/20/36/porcro.JPG?w=1200&h=1200&auto=compress,format&fit=clip">
+                               <h1 class = "innerText"><strong>Footballify Forecast:</strong> Mane And Salah involved In Transfer Talks As Their Contracts Approach End, Ajax Want Bergwijn, Mourinho To PSG!</h1>
+                            </div>
+                           </div>
+                       <hr class="roundedBar"> 
+
                         <!-- <div class="newsel">
                             <div class="imgcont">
                                <img class="newsimg square" src="https://pbs.twimg.com/media/Ez66-tGWUAAIYCC.jpg:large">
