--- a/index.html
+++ b/index.html
@@ -66,20 +66,19 @@
 
                         <div class="newsel">
                             <div class="imgcont">
-                               <img class="newsimg square" src="https://sm.imgix.net/20/36/porcro.JPG?w=1200&h=1200&auto=compress,format&fit=clip">
-                               <h1 class = "innerText"><strong>Footballify Forecast:</strong> Mane And Salah involved In Transfer Talks As Their Contracts Approach End, Ajax Want Bergwijn, Mourinho To PSG!</h1>
+                               <img class="newsimg square" src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/bltad70618cf539578b/629373aa7c560a0f7c5eddce/Mane.jpg">
+                               <h1 class = "innerText"><strong>Footballify Transfer Talk:</strong> Mane And Salah involved In Transfer Talks As Their Contracts Approach End, Ajax Want Bergwijn, Mourinho To PSG!</h1>
                             </div>
                            </div>
                        <hr class="roundedBar"> 
 
-                        <!-- <div class="newsel">
-                            <div class="imgcont">
-                               <img class="newsimg square" src="https://pbs.twimg.com/media/Ez66-tGWUAAIYCC.jpg:large">
-                               <h1 class = "innerText"><strong>Premier League Pandemonium:</strong> Ilkay Gundogan and Rodri Help Mount AMAZING Comeback After Going 2-0 DOWN Against Aston Villa To Win City The Premier League Title! Liverpool Win Not Enough!<a class="blueLink" href="https://footballify.net/news/"> Read Here!</a>
-                               </h1>
-                            </div>
-                           </div>
-                       <hr class="roundedBar">  -->
+                       <div class="newsel">
+                        <div class="imgcont">
+                           <img class="newsimg square" src="https://idsb.tmgrup.com.tr/ly/uploads/images/2022/06/05/210211.jpg">
+                           <h1 class = "innerText"><strong>Footballify GOTD:</strong>Beautiful Cengiz Under 35 Yard Chip Against Faroe Islands Takes Footballify Goal Of The Day!</h1>
+                        </div>
+                       </div>
+                   <hr class="roundedBar"> 
     </div>
 
     <div class="parentContainer "></div>
