--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -48,18 +48,18 @@
 
 <div class="streamlist"> 
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
-    <h1 class="games"><a href="http://footballify.net/livestreams/1">Luton Town VS Huddersfield Town</a></hi>
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/2">Rayo Vallecano VS Villareal</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/3">Real Madrid VS Levante</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/4">Tottenham Hotspur VS Arsenal</a></h1> -->
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/">Leicester City VS Norwich City</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/">Watford FC VS Everton FC</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/">Sevilla VS RCD Mallorca</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/">FC Nantes VS Stade Rennais</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/">Manchester City VS Wolverhampton Wanderers</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/">Elche CF VS Atletico Madrid</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/">Juventus VS Inter Milan</a></h1> -->
-    <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
+    <h1 class="games"><a href="http://footballify.net/livestreams/1">San Marino VS Malta</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/2">Cyprus VS Northern Ireland</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/3">Gibraltar VS North Macedonia</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/4">Czech Republic VS Spain</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/5">Portugal VS Switzerland</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/6">Serbia VS Slovenia</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/7">Sweden VS Norway</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/8">Kosovo VS Greece</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/9">Bulgaria VS Georgia</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/10">Wales VS Ukraine</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/11">Peru VS New Zealand</a></h1> -->
+    <h3><strong>Close any Popup ads and Cancel any downloads. These links are confirmed working and are tested regularly!</strong></h3>
 <div class="bnavbar">
         <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
         <a href="http://footballify.net/dmca" class="active" >DMCA</a>
