--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -58,7 +58,7 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/8">Kosovo VS Greece</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/9">Bulgaria VS Georgia</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/10">Wales VS Ukraine</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/11">Peru VS New Zealand</a></h1> -->
+    <h1 class="games"><a href="http://footballify.net/livestreams/11">Peru VS New Zealand</a></h1>
     <h3><strong>Close any Popup ads and Cancel any downloads. These links are confirmed working and are tested regularly!</strong></h3>
 <div class="bnavbar">
         <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
