--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
                        <div class="newsel">
                         <div class="imgcont">
-                           <img class="newsimg square" src="https://idsb.tmgrup.com.tr/ly/uploads/images/2022/06/05/210211.jpg">
-                           <h1 class = "innerText"><strong>Footballify GOTD:</strong>Beautiful Cengiz Under 35 Yard Chip Against Faroe Islands Takes Footballify Goal Of The Day!</h1>
+                           <img class="newsimg square" src="https://www.irishtimes.com/resizer/wdf18ub3ChMUciEtPjIJ4UjqmZ8=/1600x1200/filters:format(jpg):quality(70)/cloudfront-eu-central-1.images.arcpublishing.com/irishtimes/4ZMOFULBPI4ZY35JV2I23KXLW4.jpg">
+                           <h1 class = "innerText"><strong>Footballify GOTD:</strong>Joao Cancelo Scores Amazing Goal From Outside The Foot Bernardo Silva Pass Winning Goal Of The Day!</h1>
                         </div>
                        </div>
                    <hr class="roundedBar"> 
