--- a/livestreams/14/index.html
+++ b/livestreams/14/index.html
@@ -67,7 +67,7 @@
         <h2><a class="gamelinks" href="https://dubs6k.xyz/embed/webplayer=ifr&c=6789133&lang=en&eid=922571&lid=1377698&fwm.php" target="_blank">Link 8</a></h2>
         <h2><a class="gamelinks" href="https://sport2watch.xyz/live/8216-s1&utm_source=10066sports.php" target="_blank">Link 9</a></h2>
         <h2><a class="gamelinks" href="http://tvtoss.club/buffer/portlandtrail-blaz-ers.php" target="_blank">Link 10</a></h2>
-        <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
+        <h3><strong>Close any Popup ads, Cancel any downloads, these links are confirmed working and are tested regularly!</strong></h3>
     <div class="bnavbar">
             <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
             <a href="http://footballify.net/dmca" class="active" >DMCA</a>
