--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -60,17 +60,17 @@
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
 
     <h1>San Marino VS Malta</h1>
-    <h2><a class="gamelinks" href="https://footybite.to/n-marino-vs-m/" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="http://enjoy4k.xyz/8k/hd11.php" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="http://papahd.club/san-marino-malta/" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="http://tvtoss.club/buffer/brooklyn-nets.php" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="http://enjoy4k.xyz/8k/hd6.php" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="https://dubs6k.xyz/embed/webplayer=ifr&c=5678891&lang=en&eid=922571&lid=1377698&fwm.php" target="_blank">Link 6</a></h2>
-    <h2><a class="gamelinks" href="http://tvtoss.club/buffer/brooklyn-nets.php" target="_blank">Link 7</a></h2>
-    <h2><a class="gamelinks" href="https://footybite.to/n-marino-vs-m/" target="_blank">Link 8</a></h2>
-    <h2><a class="gamelinks" href="http://tvtoss.club/buffer/brooklyn-nets.php" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="http://papahd.club/san-marino-malta/" target="_blank">Link 10</a></h2>
-    <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
+    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
+        <h3><strong>Close any Popup ads, Cancel any Downloads, these links are confirmed safe and working and are tested regularly!</strong></h3>
 
 </div>
 <div class="bnavbar">
