--- a/livestreams/15/index.html
+++ b/livestreams/15/index.html
@@ -67,7 +67,7 @@
         <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
         <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
         <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
-        <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
+        <h3><strong>Close any Popup ads, Cancel any Downloads, these links are confirmed safe and working and are tested regularly!</strong></h3>
     <div class="bnavbar">
             <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
             <a href="http://footballify.net/dmca" class="active" >DMCA</a>
