--- a/livestreams/5/index.html
+++ b/livestreams/5/index.html
@@ -56,17 +56,17 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Portugal VS Switzerland</h1>
-    <h2><a class="gamelinks" href="https://footybite.to/n-marino-vs-m/" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/portugal-vs-switzerland-s2/" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="http://enjoy4k.xyz/8k/hd12.php" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="http://sportsio.xyz/portugal-switzerland/" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="http://tvtoss.club/buffer/philadelphia-76ers.php" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="https://dubs6k.xyz/embed/webplayer=ifr&c=6788912&lang=en&eid=922571&lid=1377698&fwm.php" target="_blank">Link 6</a></h2>
-    <h2><a class="gamelinks" href="https://1.vecdn.pw/ch12.php" target="_blank">Link 7</a></h2>
-    <h2><a class="gamelinks" href="https://sport2watch.xyz/live/8216-s1&utm_source=10049sports.php" target="_blank">Link 8</a></h2>
-    <h2><a class="gamelinks" href="https://nowagoal2.xyz/page/Wolfsburg.php" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="https://sport2watch.xyz/live/8216-s1&utm_source=10049sports.php" target="_blank">Link 10</a></h2>
-    <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
+    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
+    <h3><strong>Close any Popup ads, Cancel any Downloads, these links are confirmed safe and working and are tested regularly!</strong></h3>
 
 </div>
 <div class="bnavbar">
