--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <div class="newsel">
                             <div class = 'league addborder'>Football News</div>
                              <div class="imgcont">
-                                <img class="newsimg" src="https://static.standard.co.uk/2022/06/04/19/newFile.jpg?width=1200&auto=webp&quality=75">
-                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong> England Suffer Shock Defeat To Hungary, Italy-Germany Ends 1-1, Turkey Picks Up Routine Win!</h1>
+                                <img class="newsimg" src="https://e0.365dm.com/22/06/2048x1152/skysports-lionel-messi-argentina_5796389.jpg">
+                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong>Messi and Ronaldo Both Impress, Wales Book Spot After 1-0 Win Against Ukraine, Norway and Serbia Win!</h1>
                              </div>
                              <!-- <a class="blueLink" href="https://footballify.net/news/"> Read Here!</a>                                                                                                 fef -->
                             </div>
@@ -58,8 +58,8 @@
 
                         <div class="newsel">
                              <div class="imgcont">
-                                <img class="newsimg square" src="https://sm.imgix.net/20/36/porcro.JPG?w=1200&h=1200&auto=compress,format&fit=clip">
-                                <h1 class = "innerText"><strong>Footballify Forecast:</strong> Portugal Set to Play Switzerland, Wales Play Ukraine for World Cup Spot, Spain Face Czechia!</h1>
+                                <img class="newsimg square" src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/bltb569dbc05e80926b/619024f198a5b30ff43c2dbc/GettyImages-1236544866(1).jpg">
+                                <h1 class = "innerText"><strong>Footballify Forecast:</strong> Croatia, France Meet For World Cup Rematch, Japan Play Brazil In Friendly, Austria, Denmark, Albania, Iceland In Action!</h1>
                              </div>
                             </div>
                         <hr class="roundedBar"> 
